# arduinobot_description

./: frames_2024-08-29_08.36.19.gv  output.urdf
install/: local_setup.sh  setup.sh
install/arduinobot_controller/share/arduinobot_controller/: package.sh
install/arduinobot_cpp_examples/lib/arduinobot_cpp_examples/: simple_publisher
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/: local_setup.sh  package.dsv  package.ps1  package.sh
install/arduinobot_description/share/arduinobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build  latest_list
src/arduinobot_controller/: CMakeLists.txt  package.xml
src/arduinobot_cpp_examples/: CMakeLists.txt
src/arduinobot_cpp_examples/src/: simple_publisher.cpp
src/arduinobot_description/: CMakeLists.txt
src/arduinobot_description/launch/: display.launch.py  gazebo.launch.py
src/arduinobot_description/rviz/: display.rviz
src/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_gazebo.xacro
src/arduinobot_interfaces/: CMakeLists.txt
src/arduinobot_interfaces/srv/: QuaternionToEuler.srv
src/arduinobot_moveit/config/: arduinobot.srdf  initial_position.yaml  joint_limits.yaml  kinematic.yaml  moveit_controllers.yaml  pliz_catesian_limits.yaml
src/arduinobot_moveit/launch/: moveit.launch.py
src/arduinobot_py_examples/: setup.py
src/arduinobot_py_examples/arduinobot_py_examples/: simple_publisher.py
src/arduinobot_utils/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+109 files in other folders)
